--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ PyYAML==6.0.2
 requests==2.32.5
 rich==13.9.4
 ten_utils==0.0.15
+tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 urllib3==2.5.0
