--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,9 @@ test.py
 raccoon/bin
 config.yaml
 manifest.txt
+apks/
+perms/
+sources.json
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
