--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@ config.yaml
 manifest.txt
 apks/
 perms/
-sources.json
+sources.yaml
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
